Added p elements for the temperature units

--- a/src/template.html
+++ b/src/template.html
@@ -73,7 +73,7 @@
             <div class="weather-icon"></div>
             <div class="temperature-icon">
               <p class="temperature-figure">10°</p>
-              <p class="unit">C</p>
+              <p class="unit temp-unit">C</p>
             </div>
             <div class="current-weather-description">
               <p>Cloudy</p>
@@ -103,7 +103,7 @@
                 <p>Feels like</p>
                 <div class="current-weather-detail">
                   <p class="current-feels-like-temperature">8°</p>
-                  <p class="feels-like-temp-unit">C</p>
+                  <p class="feels-like-temp-unit temp-unit">C</p>
                 </div>
               </div>
             </div>
@@ -142,70 +142,100 @@
                     <p>00</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T01">
                   <div class="hour">
                     <p>01</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T02">
                   <div class="hour">
                     <p>02</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T03">
                   <div class="hour">
                     <p>03</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T04">
                   <div class="hour">
                     <p>04</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T05">
                   <div class="hour">
                     <p>05</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T06">
                   <div class="hour">
                     <p>06</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T07">
                   <div class="hour">
                     <p>07</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T08">
                   <div class="hour">
                     <p>08</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T09">
                   <div class="hour">
                     <p>09</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
 
                 <div id="T10">
@@ -213,98 +243,140 @@
                     <p>10</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T11">
                   <div class="hour">
                     <p>11</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T12">
                   <div class="hour">
                     <p>12</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T13">
                   <div class="hour">
                     <p>13</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T14">
                   <div class="hour">
                     <p>14</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T15">
                   <div class="hour">
                     <p>15</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T16">
                   <div class="hour">
                     <p>16</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T17">
                   <div class="hour">
                     <p>17</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T18">
                   <div class="hour">
                     <p>18</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T19">
                   <div class="hour">
                     <p>19</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T20">
                   <div class="hour">
                     <p>20</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T21">
                   <div class="hour">
                     <p>21</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T22">
                   <div class="hour">
                     <p>22</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
                 <div id="T23">
                   <div class="hour">
                     <p>23</p>
                   </div>
                   <div class="hour-weather-icon"></div>
-                  <div class="hour-temperature"></div>
+                  <div class="hour-temperature">
+                    <p class="temp"></p>
+                    <p class="temp-unit hour-temp-unit"></p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -327,62 +399,97 @@
                 <p>TODAY</p>
               </div>
               <div class="weekly-weather-icon"></div>
-              <div class="weekly-temperature"></div>
-              <div class="weekly-weather-description"></div>
+              <div class="weekly-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
+              <div class="weekly-weather-description">
+                <p></p>
+              </div>
             </div>
             <div>
               <div class="weekly-day">
                 <p>MON</p>
               </div>
               <div class="weekly-weather-icon"></div>
-              <div class="weekly-temperature"></div>
-              <div class="weekly-weather-description"></div>
+              <div class="weekly-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
+              <div class="weekly-weather-description">
+                <p></p>
+              </div>
             </div>
             <div>
               <div class="weekly-day">
                 <p>TUE</p>
               </div>
               <div class="weekly-weather-icon"></div>
-              <div class="weekly-temperature"></div>
-              <div class="weekly-weather-description"></div>
+              <div class="weekly-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
+              <div class="weekly-weather-description">
+                <p></p>
+              </div>
             </div>
             <div>
               <div class="weekly-day">
                 <p>WED</p>
               </div>
               <div class="weekly-weather-icon"></div>
-              <div class="weekly-temperature"></div>
-              <div class="weekly-weather-description"></div>
+              <div class="weekly-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
+              <div class="weekly-weather-description">
+                <p></p>
+              </div>
             </div>
             <div>
               <div class="weekly-day">
                 <p>THU</p>
               </div>
               <div class="weekly-weather-icon"></div>
-              <div class="weekly-temperature"></div>
-              <div class="weekly-weather-description"></div>
+              <div class="weekly-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
+              <div class="weekly-weather-description">
+                <p></p>
+              </div>
             </div>
             <div>
               <div class="weekly-day">
                 <p>FRI</p>
               </div>
               <div class="weekly-weather-icon"></div>
-              <div class="weekly-temperature"></div>
-              <div class="weekly-weather-description"></div>
+              <div class="weekly-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
+              <div class="weekly-weather-description">
+                <p></p>
+              </div>
             </div>
             <div>
               <div class="weekly-day">
                 <p>SAT</p>
               </div>
               <div class="weekly-weather-icon"></div>
-              <div class="weekly-temperature"></div>
-              <div class="weekly-weather-description"></div>
+              <div class="weekly-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
+              <div class="weekly-weather-description">
+                <p></p>
+              </div>
             </div>
           </div>
         </div>
         <div class="precipitation-container">
           <div class="precipitation-header">
-            <h4>Precipitation</h4>
+            <h4>Precipitation Probability</h4>
           </div>
           <div class="precipitation-info">
             <div class="precipitation">
@@ -612,7 +719,10 @@
                 <p></p>
               </div>
               <div class="world-city-icon"></div>
-              <div class="world-city-temperature"></div>
+              <div class="world-city-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
               <div class="world-city-info"></div>
             </div>
             <div class="world-city">
@@ -620,7 +730,10 @@
                 <p></p>
               </div>
               <div class="world-city-icon"></div>
-              <div class="world-city-temperature"></div>
+              <div class="world-city-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
               <div class="world-city-info"></div>
             </div>
             <div class="world-city">
@@ -628,7 +741,10 @@
                 <p></p>
               </div>
               <div class="world-city-icon"></div>
-              <div class="world-city-temperature"></div>
+              <div class="world-city-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
               <div class="world-city-info"></div>
             </div>
             <div class="world-city">
@@ -636,7 +752,10 @@
                 <p></p>
               </div>
               <div class="world-city-icon"></div>
-              <div class="world-city-temperature"></div>
+              <div class="world-city-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
               <div class="world-city-info"></div>
             </div>
             <div class="world-city">
@@ -644,7 +763,10 @@
                 <p></p>
               </div>
               <div class="world-city-icon"></div>
-              <div class="world-city-temperature"></div>
+              <div class="world-city-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
               <div class="world-city-info"></div>
             </div>
             <div class="world-city">
@@ -652,7 +774,10 @@
                 <p></p>
               </div>
               <div class="world-city-icon"></div>
-              <div class="world-city-temperature"></div>
+              <div class="world-city-temperature">
+                <p class="temp"></p>
+                <p class="temp-unit"></p>
+              </div>
               <div class="world-city-info"></div>
             </div>
           </div>
